Adjusting the theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,18 +3,28 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --primary-color: #202632;
+  --secondary-color: #313A49;
+  --tetiary-color: ;
+  --text-color: hsl(193,38%,86%);
+  --btn-color: #000;
+}
+.dark-mode{
+  --primary-color: #202632;
+  --secondary-color: #313A49;
+  --tetiary-color: ;
+  --text-color: hsl(193,38%,86%);
+  --btn-color: #000;
+}
+.light-mode{
+  --primary-color: rgb(214,219,220);
+  /* --secondary-color: hsl(193,23%,77%);
+  --tetiary-color: ;
+  --text-color: white;
+  --btn-color: #fff; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+
 
 /* body {
   color: rgb(var(--foreground-rgb));
