--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,22 +19,12 @@
 .light-mode{
   --primary-color: rgb(214,219,220);
   /* --secondary-color: hsl(193,23%,77%);
-  --tetiary-color: ;
-  --text-color: white;
-  --btn-color: #fff; */
+  --tetiary-color: ; */
+  --text-color: #000;
+  /* --btn-color: #fff; */
 }
 
 
-
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
 .blur-shadow{
   box-shadow: 0px 10px 34px hsl(150,100%,66%);
 }
